--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,17 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-wasmtime = { path = "crates/wasmtime/crates/api" }
 anyhow = "1.0.19"
 structopt = "0.3.21"
+rayon = "1.0"
+wasm-bindgen-cli-support = { path = "crates/wasm-bindgen/crates/cli-support", version = "=0.2.73" }
+
+[workspace]
+members = [
+    "benchmarks",
+    "crates/api",
+]
+exclude = [
+    "crates/wasmtime",
+    "crates/wasm-bindgen",
+]
