--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,11 @@ anyhow = "1.0.19"
 structopt = "0.3.21"
 rayon = "1.0"
 wasm-bindgen-cli-support = { path = "crates/wasm-bindgen/crates/cli-support", version = "=0.2.73" }
+wasmtime = { path = "crates/wasmtime/crates/api", version = "0.12.0" }
+wit-api = { path = "crates/api", version = "0.1.0" }
+
+[dev-dependencies]
+assert_cmd = "1.0"
 
 [workspace]
 members = [
