--- a/crates/api/Cargo.toml
+++ b/crates/api/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2018"
 
 [dependencies]
 anyhow = "1.0.19"
+serde_json = "1.0"
 wasm-bindgen-cli-support = { path = "../wasm-bindgen/crates/cli-support", version = "=0.2.73" }
 wasmtime = { path = "../wasmtime/crates/api", version = "0.12.0" }
